--- a/dictionary_flutter/pubspec.yaml
+++ b/dictionary_flutter/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  http: ^1.1.0
+  flutter_hooks: ^0.18.6
 
 dev_dependencies:
   flutter_test:
