--- a/dictionary_flutter/pubspec.yaml
+++ b/dictionary_flutter/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   get: ^4.6.5
   http: ^1.1.0
   flutter_hooks: ^0.18.6
+  firebase_core: ^2.14.0
+  cloud_firestore: ^4.8.2
 
 dev_dependencies:
   flutter_test:
