--- a/dictionary_flutter/pubspec.yaml
+++ b/dictionary_flutter/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_hooks: ^0.18.6
   firebase_core: ^2.14.0
   cloud_firestore: ^4.8.2
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_test:
