--- a/dictionary_flutter/pubspec.yaml
+++ b/dictionary_flutter/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   
   english_words: ^4.0.0
+  flutter_tts: ^3.7.0
 
 
   # The following adds the Cupertino Icons font to your application.
